--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
         </ul>
       </div>
       <div class='w3-col m6 s6 w3-center' id="formName"></div>
-      <input class = 'w3-input w3-border w3-col m6 s6' name="amount" type="number" id='amountInput' placeholder="Amount"></input>
+      <input class = 'w3-input w3-border w3-col m6 s6' type="number" id='amountInput' placeholder="Amount"></input>
       <div class='w3-col m12 s12 w3-center' id="TransButton">Send</div>
       <div class='w3-col m12 s12 w3-center' id="status"></div>
 
