--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
       <!-- Loans Algorithm -->
       <br>
       <div class="w3-container" id="Loans-container">
-
+        Made By Gunnar Enserro
       </div>
     </div>
 
